# peak-tracker

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh  fly.toml
calendar-app/: index.html
calendario-app/: index.html
src/: auth.rs  main.rs  models.rs  store.rs
src/routes/: calendar.rs  mod.rs  peaks.rs  proposals.rs  users.rs
static/: admin.html  i18n.js  index.html  login.html  map.html  mapa.html
